# rtt_tooling

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml  st_nucleo_l4_rtt.cfg
.github/workflows/: build.yml
cmake/: arm-none-eabi-gcc.cmake
docs/: PYTHON_README.md  googletest_size_optimization.md  rtt_reader_quick_reference.md  testing_deployment_guide.md
rtt_benchmark/: CMakeLists.txt  README.md
rtt_benchmark/examples/: README.md  benchmark_example.cpp
rtt_benchmark/include/rtt_benchmark/: rtt_benchmark.hpp
rtt_benchmark/src/: rtt_benchmark.cpp
rtt_data/: CMakeLists.txt  README.md
rtt_data/examples/: data_example.cpp
rtt_data/include/rtt_data/: rtt_data.hpp
rtt_data/src/: rtt_data.cpp
rtt_fault_handler/: CMakeLists.txt  README.md
rtt_fault_handler/examples/: fault_handler_example.cpp
rtt_fault_handler/include/rtt_fault_handler/: rtt_fault_handler.hpp
rtt_fault_handler/src/: rtt_fault_handler.cpp
rtt_freertos_hooks/: CMakeLists.txt  README.md
rtt_freertos_hooks/examples/: hooks_example.cpp
rtt_freertos_hooks/include/rtt_freertos_hooks/: rtt_freertos_hooks.hpp
rtt_freertos_hooks/src/: rtt_freertos_hooks.cpp
rtt_freertos_trace/: CMakeLists.txt  QUICKSTART.md  README.md
rtt_freertos_trace/examples/: example_trace.cpp
rtt_freertos_trace/include/rtt_freertos_trace/: rtt_freertos_trace.hpp  rtt_freertos_trace_hooks.h
rtt_freertos_trace/src/: rtt_freertos_trace.cpp
rtt_logger/: CMakeLists.txt  README.md
rtt_logger/examples/: logger_example.cpp
rtt_logger/include/rtt_logger/: rtt_logger.hpp
rtt_logger/src/: rtt_logger.cpp
rtt_memory_dump/: CMakeLists.txt  README.md
rtt_memory_dump/examples/: memory_dump_example.cpp
rtt_memory_dump/include/rtt_memory_dump/: rtt_memory_dump.hpp
rtt_memory_dump/src/: rtt_memory_dump.cpp
rtt_unittest/: CMakeLists.txt  README.md
rtt_unittest/examples/: unittest_example.cpp
rtt_unittest/include/rtt_unittest/: rtt_unittest.hpp
rtt_unittest/src/: rtt_unittest.cpp
rtt_unittest/tests/: test_main_rtt.cpp  test_rtt_logger.cpp  test_rtt_unittest.cpp
scripts/: generate_binary_stats.sh  rtt_analyzer.py  rtt_data_reader.py  rtt_reader.py  rtt_trace_analyzer.py  rtt_trace_reader.py  rtt_viewer.py
tests/: conftest.py  test_rtt_analyzer.py  test_rtt_data_reader.py  test_rtt_reader.py  test_rtt_trace_analyzer.py  test_rtt_trace_reader.py  test_rtt_viewer.py
